# actions

./: README.md  rule.yml
.github/workflows/: actions-validator.yml  python.yml  version-check.yml  yamllint.yml
_python.test/: README.md  pytest.ini  setup.cfg
_python.test/dummy/: main.py
_python.test/tests/: test_main.py
action-validator/: README.md  action.yml
docker/: README.md  action.yml
flake8/: README.md  action.yml
goupdate/: README.md  action.yml
merge-pages/: README.md  action.yml
pdoc/: README.md  action.yml
pypi-upload/: README.md  action.yml
pytest/: README.md  action.yml
python/: README.md  action.yml
tools/: mgmt.py  mkdocs-jinja.sh  readme.j2  requirements.txt
wheel/: README.md  action.yml  wheel2md.py
