[metadata]
name = dummy
version = attr: dummy.version.VERSION
url = https://github.com/wtnb75/actions/tree/main/_python.test
author = Watanebe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_files =
  LICENSE
description = dummy project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
  dummy=dummy.main:cli
